# polygon-booleans

./: Cargo.toml  README.md
examples/: accomodate.rs  test.rs
src/: geometry.rs  lib.rs  polygon_region.rs
