[package]
name = "polygon-booleans"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4", default-features = false }
mint = "0.5"
nalgebra = { version = "0.33", features = ["convert-mint"] }
rstar = { version = "0.12", features = ["mint"] }

[dev-dependencies]
plotters = { version = "0.3", default-features = false, features = ["svg_backend"] }
